@@ -6,7 +6,7 @@ repository 'https://github.com/anazawa/p5-CGI-Header-PSGI';
 
 requires 'Carp' => '1.10';
 requires 'Role::Tiny';
-requires 'CGI::Header' => '0.30';
+requires 'CGI::Header' => '0.32';
 
 test_requires 'Test::More' => '0.98';
 test_requires 'Test::Pod'  => '1.45';
